# PDF_Reader_ScaleDP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Copy_of_Parse_Document.ipynb  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: pypi-publish.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.md  quickstart.md
examples/jupyter/: ImageNer.ipynb  ImageOcr.ipynb  ObjectDetection.ipynb  PdfOcr.ipynb
scaledp/: VERSION  __init__.py  params.py
scaledp/image/: DataToImage.py  ImageCropBoxes.py  ImageDrawBoxes.py
scaledp/metrics/: object_similarity.py
scaledp/models/detectors/: BaseDetector.py  DocTRTextDetector.py  YoloDetector.py
scaledp/models/ner/: BaseNer.py  (+2 more)
scaledp/pdf/: PdfDataToImage.py
scaledp/pipeline/: PandasPipeline.py
scaledp/schemas/: Box.py  DetectorOutput.py  ExtractorOutput.py  Image.py
scaledp/utils/: dataclass.py  pydantic_shema_utils.py  show_utils.py
sparkpdf/: README.md  __init__.py  enums.py  params.py
sparkpdf/image/: DataToImage.py  ImageDrawBoxes.py
sparkpdf/pdf/: PdfDataToImage.py
sparkpdf/pipeline/: LocalPipeline.py
sparkpdf/schemas/: Box.py  Document.py  Entity.py  Image.py  NerOutput.py  OcrOutput.py
sparkpdf/utils/: dataclass.py  display_utils.py
tests/: conftest.py  test_start.py  test_start_scaledp.py  test_start_spark_pdf.py
tests/image/: test_data_to_image.py  test_image_draw_boxes.py
tests/pdf/: test_pdf_data_to_image.py
tests/pipeline/: test_pipeline.py
tests/schemas/: test_schemas.py
tests/utils/: test_display_utils.py  test_utils.py
(+40 files in other folders)
