[tool.poetry]
name = "spark-pdf"
version = "0.1.0"
description = ""
authors = ["Mykola Melnyk <kolia1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.3"
pillow = "11.0.0"
imagesize = "1.4.1"
pandas = "2.2.3"
pytesseract = "0.3.13"
pytest = "8.3.3"
pyspark-types = { git = "https://github.com/kolia1985/pyspark_types" }
PyMuPDF = "1.24.11"
numpy = "2.1.0"
pyarrow = "17.0.0"
transformers = "4.46.0"
jupyter = "^1.1.1"

[project]
dependencies = [
    "pytest"
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-spark = "0.6.0"
jupyter = "^1.1.1"
tesserocr = "2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
